# mymath

./: CMakeLists.txt  README.md  mymath.cpp  mymath.h
